Update QSO Logger V1.6.html
Signed-off-by: TB7CEA <jandanma76@gmail.com>

--- a/QSO Logger V1.6.html
+++ b/QSO Logger V1.6.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <title>QSO Logger V1.6 - Boş Başlangıç</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta TB7CEA TARAFINDAN HAZIRLANDI="viewport" content="width=device-width, initial-scale=1" />
 <style>
 :root {
   --bg-color: #ffffff;
